Updating Features section

--- a/index.html
+++ b/index.html
@@ -60,36 +60,26 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto me-lg-5">
                   <li class="nav-item">
-                    <a
-                      class="nav-link"
-                      href="http://demo.open-metadata.org/signin"
-                      >Sandbox</a
+                    <a class="nav-link" href="#getting-started"
+                      >Getting Started</a
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="https://docs.open-metadata.org/"
-                      >Documentation</a
-                    >
+                    <a class="nav-link" href="#features">Features</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="http://blog.open-metadata.org/"
-                      >Blog</a
-                    >
+                    <a class="nav-link" href="#integrations">Integrations</a>
                   </li>
                   <li class="nav-item">
-                    <a
-                      class="nav-link"
-                      href="https://github.com/open-metadata/OpenMetadata"
-                      >Github</a
-                    >
+                    <a class="nav-link" href="#blogs">Blogs</a>
                   </li>
                 </ul>
                 <a
                   class="btn fw-500 ms-lg-4 btn-primary"
                   href="https://github.com/open-metadata/OpenMetadata/reelases"
                 >
-                  Download
-                  <i class="ms-2" data-feather="download-cloud"></i>
+                  Cloud
+                  <i class="ms-2" data-feather="cloud-lightning"></i>
                 </a>
               </div>
             </div>
@@ -151,6 +141,7 @@
 
           <section
             class="bg-img-cover overlay overlay-light overlay-90 pb-15 pt-10 bg-ready"
+            id="getting-started"
           >
             <div class="container px-5 z-1">
               <div class="row gx-5 justify-content-center text-center">
@@ -200,9 +191,7 @@
                     Benefit with the step-by-step guides to start implementing
                     and get started.
                   </p>
-                  <a class="btn btn-sm btn-primary fw-500" href="#!"
-                    >Learn More</a
-                  >
+                  <a class="btn btn-sm btn-primary fw-500" href="#!">Visit</a>
                 </div>
                 <div class="col-lg-3 mb-5 mb-lg-0">
                   <img src="images/icon-git.svg" class="mb-4" />
@@ -211,9 +200,7 @@
                     Contribute code, try out good starting issues, and join the
                     momentum.
                   </p>
-                  <a class="btn btn-sm btn-primary fw-500" href="#!"
-                    >Learn More</a
-                  >
+                  <a class="btn btn-sm btn-primary fw-500" href="#!">Explore</a>
                 </div>
                 <div class="col-lg-3 mb-5 mb-lg-0">
                   <img src="images/icon-slack.svg" class="mb-4" />
@@ -222,9 +209,7 @@
                     Ask questions, get help, discuss feature requests, and
                     connect with contributors and users.
                   </p>
-                  <a class="btn btn-sm btn-primary fw-500" href="#!"
-                    >Learn More</a
-                  >
+                  <a class="btn btn-sm btn-primary fw-500" href="#!">Connect</a>
                 </div>
                 <div class="col-lg-3">
                   <img src="images/icon-join.svg" class="mb-4" />
@@ -234,7 +219,7 @@
                     heading.
                   </p>
                   <a class="btn btn-sm btn-primary fw-500" href="#!"
-                    >Learn More</a
+                    >Join Now</a
                   >
                 </div>
               </div>
@@ -253,7 +238,7 @@
             </div>
           </section>
 
-          <section class="bg-light py-10" id="explore">
+          <section class="bg-light py-10" id="features">
             <div class="container px-5">
               <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8">
@@ -266,102 +251,161 @@
                   </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-sm-12">
-                  <div class="card mb-4">
-                    <div class="card-body p-0">
-                      <div class="row g-0">
-                        <div class="col-lg-6 p-5">
-                          <a
-                            class="badge badge-marketing bg-primary-soft rounded-pill text-primary mb-3"
-                            href="#!"
-                            >Version 0.8</a
-                          >
-                          <a class="text-dark" href="#!">
-                            <h1>All Your Data in One Place</h1>
-                          </a>
-                          <p>
-                            Fusce fermentum rhoncus ex ut dignissim. Vestibulum
-                            porttitor nec risus eu fringilla. Duis id tempor
-                            massa, quis vestibulum quam. Nulla facilisi. Nullam
-                            sapien sem, ornare a scelerisque vel, mattis vel ex.
-                          </p>
-                          <a class="text-arrow-icon small" href="#!">
-                            Read more
-                            <i data-feather="arrow-right"></i>
-                          </a>
-                        </div>
-                        <div class="col-lg-6">
-                          <img
-                            src="https://1627621137-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FmHhAy9DGs2pRLDl3VEes%2Fuploads%2Fgit-blob-619f9bff331fbff5b92d61f96107c863090b1187%2Fhome-screen.gif?alt=media"
-                            class="img-fluid"
-                          />
-                        </div>
-                      </div>
+              <div
+                class="row gx-5 align-items-center justify-content-center mb-5"
+              >
+                <div class="col-lg-5">
+                  <h2>All data in one place</h2>
+                  <p class="lead">
+                    OpenMetadata provides all the data context you need for
+                    different use cases in a single place.
+                  </p>
+                  <div class="row gx-5">
+                    <div class="col-md-12 mb-4">
+                      <h6>Landing Pages</h6>
+                      <p class="mb-2 small">
+                        We've crafted landing page examples for many popular
+                        business and product types.
+                      </p>
+                      <a class="small text-arrow-icon" href="#!">
+                        Learn More
+                        <i data-feather="arrow-right"></i>
+                      </a>
+                    </div>
+                    <div class="col-md-12 mb-4">
+                      <h6>Facet Search</h6>
+                      <p class="mb-2 small mb-0">
+                        Use our pre-built page examples to quickly create inner
+                        pages to your website.
+                      </p>
+                      <a class="small text-arrow-icon" href="#!">
+                        Learn More
+                        <i data-feather="arrow-right"></i>
+                      </a>
                     </div>
                   </div>
-                  <div class="card mb-4">
-                    <div class="card-body p-0">
-                      <div class="row g-0">
-                        <div class="col-lg-6">
-                          <img
-                            src="https://1627621137-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FmHhAy9DGs2pRLDl3VEes%2Fuploads%2Fgit-blob-619f9bff331fbff5b92d61f96107c863090b1187%2Fhome-screen.gif?alt=media"
-                            class="img-fluid"
-                          />
-                        </div>
-                        <div class="col-lg-6 p-5">
-                          <a
-                            class="badge badge-marketing bg-primary-soft rounded-pill text-primary mb-3"
-                            href="#!"
-                            >Version 0.7</a
-                          >
-                          <a class="text-dark" href="#!">
-                            <h1>Data Discovery</h1>
-                          </a>
-                          <p>
-                            Fusce fermentum rhoncus ex ut dignissim. Vestibulum
-                            porttitor nec risus eu fringilla. Duis id tempor
-                            massa, quis vestibulum quam. Nulla facilisi. Nullam
-                            sapien sem, ornare a scelerisque vel, mattis vel ex.
-                          </p>
-                          <a class="text-arrow-icon small" href="#!">
-                            Read more
-                            <i data-feather="arrow-right"></i>
-                          </a>
-                        </div>
-                      </div>
+                </div>
+                <div class="col-lg-7" data-aos="slide-left">
+                  <div class="mb-4">
+                    <img
+                      class="img-fluid shadow-lg rounded-3"
+                      src="images/carousal-01.jpg"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div
+                class="row gx-5 align-items-center justify-content-center mb-5"
+              >
+                <div class="col-lg-7" data-aos="slide-right">
+                  <div class="mb-4">
+                    <img
+                      class="img-fluid shadow-lg rounded-3"
+                      src="images/carousal-01.jpg"
+                    />
+                  </div>
+                </div>
+                <div class="col-lg-5">
+                  <h2>Data collaboration</h2>
+                  <p class="lead">
+                    OpenMetadata provides all the data context you need for
+                    different use cases in a single place.
+                  </p>
+                  <div class="row gx-5">
+                    <div class="col-md-12 mb-4">
+                      <h6>Activity feeds</h6>
+                      <p class="mb-2 small">
+                        We've crafted landing page examples for many popular
+                        business and product types.
+                      </p>
+                      <a class="small text-arrow-icon" href="#!">
+                        Learn More
+                        <i data-feather="arrow-right"></i>
+                      </a>
+                    </div>
+                    <div class="col-md-12 mb-4">
+                      <h6>Data Lineage</h6>
+                      <p class="mb-2 small mb-0">
+                        Use our pre-built page examples to quickly create inner
+                        pages to your website.
+                      </p>
+                      <a class="small text-arrow-icon" href="#!">
+                        Learn More
+                        <i data-feather="arrow-right"></i>
+                      </a>
                     </div>
                   </div>
-                  <div class="card mb-4">
-                    <div class="card-body p-0">
-                      <div class="row g-0">
-                        <div class="col-lg-6 p-5">
-                          <a
-                            class="badge badge-marketing bg-primary-soft rounded-pill text-primary mb-3"
-                            href="#!"
-                            >Version 0.6</a
-                          >
-                          <a class="text-dark" href="#!">
-                            <h1>Importance & Owners</h1>
-                          </a>
-                          <p>
-                            Fusce fermentum rhoncus ex ut dignissim. Vestibulum
-                            porttitor nec risus eu fringilla. Duis id tempor
-                            massa, quis vestibulum quam. Nulla facilisi. Nullam
-                            sapien sem, ornare a scelerisque vel, mattis vel ex.
-                          </p>
-                          <a class="text-arrow-icon small" href="#!">
-                            Read more
-                            <i data-feather="arrow-right"></i>
-                          </a>
-                        </div>
-                        <div class="col-lg-6">
-                          <img
-                            src="https://1627621137-files.gitbook.io/~/files/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FmHhAy9DGs2pRLDl3VEes%2Fuploads%2Fgit-blob-619f9bff331fbff5b92d61f96107c863090b1187%2Fhome-screen.gif?alt=media"
-                            class="img-fluid"
-                          />
-                        </div>
-                      </div>
+                </div>
+              </div>
+              <div
+                class="row gx-5 align-items-center justify-content-center mb-5"
+              >
+                <div class="col-lg-5">
+                  <h2>Versioning</h2>
+                  <p class="lead">
+                    OpenMetadata provides all the data context you need for
+                    different use cases in a single place.
+                  </p>
+                  <div class="row gx-5">
+                    <div class="col-md-12 mb-4">
+                      <h6>History</h6>
+                      <p class="mb-2 small">
+                        We've crafted landing page examples for many popular
+                        business and product types.
+                      </p>
+                      <a class="small text-arrow-icon" href="#!">
+                        Learn More
+                        <i data-feather="arrow-right"></i>
+                      </a>
+                    </div>
+                    <div class="col-md-12 mb-4">
+                      <h6>Changelog</h6>
+                      <p class="mb-2 small mb-0">
+                        Use our pre-built page examples to quickly create inner
+                        pages to your website.
+                      </p>
+                      <a class="small text-arrow-icon" href="#!">
+                        Learn More
+                        <i data-feather="arrow-right"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-7" data-aos="slide-left">
+                  <div class="mb-4">
+                    <img
+                      class="img-fluid shadow-lg rounded-3"
+                      src="images/carousal-01.jpg"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="row gx-5 align-items-center justify-content-center">
+                <div class="col-lg-7" data-aos="slide-right">
+                  <div class="mb-4">
+                    <img
+                      class="img-fluid shadow-lg rounded-3"
+                      src="images/carousal-01.jpg"
+                    />
+                  </div>
+                </div>
+                <div class="col-lg-5">
+                  <h2>Data reliability</h2>
+                  <p class="lead">
+                    OpenMetadata provides all the data context you need for
+                    different use cases in a single place.
+                  </p>
+                  <div class="row gx-5">
+                    <div class="col-md-12 mb-4">
+                      <h6>Data profiler</h6>
+                      <p class="mb-2 small">
+                        We've crafted landing page examples for many popular
+                        business and product types.
+                      </p>
+                      <a class="small text-arrow-icon" href="#!">
+                        Learn More
+                        <i data-feather="arrow-right"></i>
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -382,7 +426,7 @@
             </div>
           </section>
 
-          <section class="bg-white pb-15 pt-10">
+          <section class="bg-white pb-15 pt-10" id="integrations">
             <div class="container px-5">
               <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8">
@@ -770,7 +814,7 @@
                     </div> -->
           </section>
 
-          <section class="bg-white pb-5 pt-10">
+          <section class="bg-white pb-5 pt-10" id="blogs">
             <div class="container px-5">
               <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8">
