updating community link

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
                                 <img src="images/icon-join.svg" class="mb-4" />
                                 <h3>Join our Community</h3>
                                 <p>Attend meetings, share your thoughts, and know where we are heading.</p>
-                                <a class="btn btn-sm btn-primary btn-quick-cta fw-500"
-                                    href="https://github.com/open-metadata/OpenMetadata/discussions">Join Now</a>
+                                <a class="btn btn-sm btn-primary btn-quick-cta fw-500" href="community.html">Join
+                                    Now</a>
                             </div>
                         </div>
                     </div>
