adding external link for github

--- a/community.html
+++ b/community.html
@@ -73,7 +73,7 @@
                                     <h1 class="page-header-ui-title fw-700">Meet & Greet on Slack</h1>
                                     <p class="page-header-ui-text mb-2">That’s where the OpenMetadata
                                         enthusiasts are;<br /> apart from <a class="text-primary"
-                                            href="https://github.com/open-metadata/OpenMetadata">GitHub</a>,
+                                            href="https://github.com/open-metadata/OpenMetadata" target="_blank">GitHub</a>,
                                         of course.</p>
                                     <p>Catch up with all the discussions and queries on the growing world of metadata.
                                         Know what other users are looking for and how OpenMetadata contributes to make
