adding external link for github

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                                     metadata docker --start
                                 </div>
                                 <a class="btn btn-primary fw-500"
-                                    href="https://docs.open-metadata.org/install/run-in-production">Deploy in
+                                    href="https://docs.open-metadata.org/install/run-in-production" target="_blank">Deploy in
                                     Production</a>
                                 <a class="btn btn-primary fw-500"
-                                    href="https://docs.open-metadata.org/install/kubernetes">Deploy in Kubernetes</a>
+                                    href="https://docs.open-metadata.org/install/kubernetes" target="_blank">Deploy in Kubernetes</a>
                             </div>
                         </div>
 
