fixing image sizes and other minor updates

--- a/index.html
+++ b/index.html
@@ -137,10 +137,12 @@
                                     metadata docker --start
                                 </div>
                                 <a class="btn btn-primary fw-500"
-                                    href="https://docs.open-metadata.org/install/run-in-production" target="_blank">Deploy in
+                                    href="https://docs.open-metadata.org/install/run-in-production"
+                                    target="_blank">Deploy in
                                     Production</a>
                                 <a class="btn btn-primary fw-500"
-                                    href="https://docs.open-metadata.org/install/kubernetes" target="_blank">Deploy in Kubernetes</a>
+                                    href="https://docs.open-metadata.org/install/kubernetes" target="_blank">Deploy in
+                                    Kubernetes</a>
                             </div>
                         </div>
 
@@ -157,21 +159,21 @@
                     <div class="container px-5">
                         <div class="row gx-5 text-center">
                             <div class="col-lg-3 mb-5 mb-lg-0">
-                                <img src="images/icon-git.svg" class="mb-4" />
+                                <img src="images/icon-git.svg" height="80" class="mb-4" />
                                 <h3>Let’s Build on GitHub</h3>
                                 <p>Contribute code, try out good starting issues, and join the momentum.</p>
                                 <a class="btn btn-sm btn-primary btn-quick-cta fw-500"
                                     href="https://github.com/open-metadata/OpenMetadata" target="_blank">Explore</a>
                             </div>
                             <div class="col-lg-3 mb-5 mb-lg-0">
-                                <img src="images/icon-doc.svg" class="mb-4" />
+                                <img src="images/icon-doc.svg" height="80" class="mb-4" />
                                 <h3>Refer Documentation</h3>
-                                <p>Benefit with the step-by-step guides to start implementing and get started.</p>
+                                <p>Benefit with the step-by-step implementation guides and get started.</p>
                                 <a class="btn btn-sm btn-primary btn-quick-cta fw-500"
                                     href="https://docs.open-metadata.org/" target="_blank">Visit</a>
                             </div>
                             <div class="col-lg-3 mb-5 mb-lg-0">
-                                <img src="images/icon-slack.svg" class="mb-4" />
+                                <img src="images/icon-slack.svg" height="80" class="mb-4" />
                                 <h3>Connect on Slack</h3>
                                 <p>Ask questions, get help, discuss features, and connect with contributors & users.
                                 </p>
@@ -179,7 +181,7 @@
                                     href="https://openmetadata.slack.com/" target="_blank">Connect</a>
                             </div>
                             <div class="col-lg-3">
-                                <img src="images/icon-join.svg" class="mb-4" />
+                                <img src="images/icon-join.svg" height="80" class="mb-4" />
                                 <h3>Join our Community</h3>
                                 <p>Attend meetings, share your thoughts, and know where we are heading.</p>
                                 <a class="btn btn-sm btn-primary btn-quick-cta fw-500" href="community.html">Join
@@ -264,8 +266,8 @@
                                     Facilitates <strong>data governance, people collaboration, and simplifies
                                         debugging.</strong></p>
                                 <p>Serves as an organizational memory of data!</p>
-                                <a class="small text-arrow-icon" href="https://docs.open-metadata.org/features"
-                                    target="_blank">
+                                <a class="small text-arrow-icon"
+                                    href="https://docs.open-metadata.org/features#metadata-versioning" target="_blank">
                                     Learn More
                                     <i data-feather="arrow-right"></i>
                                 </a>
@@ -291,8 +293,8 @@
                                     machine metadata
                                     with user knowledge.</p>
                                 <p>View the lineage at each entity level!</p>
-                                <a class="small text-arrow-icon" href="https://docs.open-metadata.org/features"
-                                    target="_blank">
+                                <a class="small text-arrow-icon"
+                                    href="https://docs.open-metadata.org/features#data-lineage" target="_blank">
                                     Learn More
                                     <i data-feather="arrow-right"></i>
                                 </a>
