--- a/community.html
+++ b/community.html
@@ -73,7 +73,8 @@
                                     <h1 class="page-header-ui-title fw-700">Meet & Greet on Slack</h1>
                                     <p class="page-header-ui-text mb-2">That’s where the OpenMetadata
                                         enthusiasts are;<br /> apart from <a class="text-primary"
-                                            href="https://github.com/open-metadata/OpenMetadata" target="_blank">GitHub</a>,
+                                            href="https://github.com/open-metadata/OpenMetadata"
+                                            target="_blank">GitHub</a>,
                                         of course.</p>
                                     <p>Catch up with all the discussions and queries on the growing world of metadata.
                                         Know what other users are looking for and how OpenMetadata contributes to make
@@ -240,12 +241,12 @@
                                     <ul class="list-unstyled mb-0">
                                         <li class="mb-2"><a href="https://docs.open-metadata.org/" target="_blank">What
                                                 is OpenMetadata?</a></li>
-                                        <li class="mb-2"><a
-                                                href="https://docs.open-metadata.org/openmetadata-apis/schemas"
+                                        <li class="mb-2"><a href="https://docs.open-metadata.org/openmetadata/schemas"
                                                 target="_blank">Schemas</a></li>
-                                        <li class="mb-2"><a href="https://docs.open-metadata.org/openmetadata-apis/apis"
+                                        <li class="mb-2"><a href="https://docs.open-metadata.org/openmetadata/apis"
                                                 target="_blank">APIs</a></li>
-                                        <li class="mb-2"><a href="https://docs.open-metadata.org/install/run-locally"
+                                        <li class="mb-2"><a
+                                                href="https://docs.open-metadata.org/install/run-openmetadata"
                                                 target="_blank">Install</a></li>
                                         <li><a href="https://docs.open-metadata.org/install/metadata-ingestion"
                                                 target="_blank">Ingestion</a></li>
