--- a/index.html
+++ b/index.html
@@ -672,12 +672,12 @@
                                     <ul class="list-unstyled mb-0">
                                         <li class="mb-2"><a href="https://docs.open-metadata.org/" target="_blank">What
                                                 is OpenMetadata?</a></li>
-                                        <li class="mb-2"><a
-                                                href="https://docs.open-metadata.org/openmetadata-apis/schemas"
+                                        <li class="mb-2"><a href="https://docs.open-metadata.org/openmetadata/schemas"
                                                 target="_blank">Schemas</a></li>
-                                        <li class="mb-2"><a href="https://docs.open-metadata.org/openmetadata-apis/apis"
+                                        <li class="mb-2"><a href="https://docs.open-metadata.org/openmetadata/apis"
                                                 target="_blank">APIs</a></li>
-                                        <li class="mb-2"><a href="https://docs.open-metadata.org/install/run-locally"
+                                        <li class="mb-2"><a
+                                                href="https://docs.open-metadata.org/install/run-openmetadata"
                                                 target="_blank">Install</a></li>
                                         <li><a href="https://docs.open-metadata.org/install/metadata-ingestion"
                                                 target="_blank">Ingestion</a></li>
