Fix slack links

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                             Explore Sandbox
                                         </a>
                                         <a class="btn btn-lg btn-outline-primary btn-home-slack fw-500"
-                                            href="https://openmetadata.slack.com/" target="_blank">
+                                            href="https://slack.open-metadata.org/" target="_blank">
                                             <img src="images/icon-slack.svg" height="18" />&nbsp;
                                             Join our
                                             Slack</a>
@@ -184,7 +184,7 @@
                                 <p>Ask questions, get help, discuss features, and connect with contributors & users.
                                 </p>
                                 <a class="btn btn-sm btn-primary btn-quick-cta fw-500"
-                                    href="https://openmetadata.slack.com/" target="_blank">Connect</a>
+                                    href="https://slack.open-metadata.org/" target="_blank">Connect</a>
                             </div>
                             <div class="col-lg-3">
                                 <img src="images/icon-join.svg" height="80" class="mb-4" />
@@ -704,7 +704,7 @@
                                 <div class="col-lg-3 offset-lg-3 col-md-6">
                                     <div class="text-uppercase-expanded text-xs mb-4">Community</div>
                                     <ul class="list-unstyled mb-0">
-                                        <li class="mb-2"><a href="https://openmetadata.slack.com/" target="_blank"><i
+                                        <li class="mb-2"><a href="https://slack.open-metadata.org/" target="_blank"><i
                                                     class="fab fa-slack"></i> Slack</a></li>
                                         <li class="mb-2"><a href="https://github.com/open-metadata/openmetadata"
                                                 target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
