Adding missing blog images and netlify logo on footer.

--- a/community.html
+++ b/community.html
@@ -5,9 +5,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
+    <meta name='description'
+        content='Join OpenMetadata meetings, webinars, & connect on Slack for updates on data discovery, governance, data quality, observability, and people collaboration.' />
+    <meta name='keywords'
+        content='metadata, data collaboration, metadata community, data discovery, data collaboration' />
     <meta name="author" content="" />
-    <title>OpenMetaData</title>
+    <title>OpenMetadata Community</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
@@ -36,6 +39,9 @@
                             aria-expanded="false" aria-label="Toggle navigation"><i data-feather="menu"></i></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto me-lg-5">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="community.html">Community</a>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="https://sandbox.open-metadata.org/signin"
                                         target="_blank">Sandbox</a>
@@ -82,7 +88,7 @@
                                     <p>Learn, engage, and get going with your organization’s needs!</p>
                                     <div class="d-flex flex-column flex-sm-row">
                                         <a class="btn btn-lg btn-outline-primary btn-home-slack fw-500"
-                                            href="https://openmetadata.slack.com/" target="_blank">
+                                            href="http://slack.open-metadata.org/" target="_blank">
                                             <img src="images/icon-slack.svg" height="18" />&nbsp;
                                             Join our
                                             Slack</a>
@@ -231,42 +237,42 @@
                     <div class="row gx-5">
                         <div class="col-lg-3">
                             <div class="footer-brand"><img src="images/omd-logo-footer.svg"></div>
-                            <div class="mb-3">Open Standard for Metadata with a Centralized Metadata Store. Discover,
+                            <div class="mb-3">Open Standard for Metadata with a Centralized Metadata Store.
+                                Discover,
                                 Collaborate and get your Data Right.</div>
                         </div>
-                        <div class="col-lg-9">
-                            <div class="row gx-5">
-                                <div class="col-lg-3 offset-lg-3 col-md-6 mb-5 mb-lg-0">
-                                    <div class="text-uppercase-expanded text-xs mb-4">Docs</div>
-                                    <ul class="list-unstyled mb-0">
-                                        <li class="mb-2"><a href="https://docs.open-metadata.org/" target="_blank">What
-                                                is OpenMetadata?</a></li>
-                                        <li class="mb-2"><a href="https://docs.open-metadata.org/openmetadata/schemas"
-                                                target="_blank">Schemas</a></li>
-                                        <li class="mb-2"><a href="https://docs.open-metadata.org/openmetadata/apis"
-                                                target="_blank">APIs</a></li>
-                                        <li class="mb-2"><a
-                                                href="https://docs.open-metadata.org/install/run-openmetadata"
-                                                target="_blank">Install</a></li>
-                                        <li><a href="https://docs.open-metadata.org/install/metadata-ingestion"
-                                                target="_blank">Ingestion</a></li>
-                                    </ul>
-                                </div>
-                                <div class="col-lg-3 offset-lg-3 col-md-6">
-                                    <div class="text-uppercase-expanded text-xs mb-4">Community</div>
-                                    <ul class="list-unstyled mb-0">
-                                        <li class="mb-2"><a href="https://openmetadata.slack.com/" target="_blank"><i
-                                                    class="fab fa-slack"></i> Slack</a></li>
-                                        <li class="mb-2"><a href="https://github.com/open-metadata/openmetadata"
-                                                target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
-                                        <li class="mb-2"><a href="https://twitter.com/open_metadata" target="_blank"><i
-                                                    class="fab fa-twitter"></i> Twitter</a></li>
-                                        <li><a href="https://www.meetup.com/openmetadata-meetup-group/"
-                                                target="_blank"><i class="fab fa-meetup"></i>
-                                                Meetup</a></li>
-                                    </ul>
-                                </div>
-                            </div>
+                        <div class="col-lg-3 offset-lg-1 col-md-6 mb-4 mb-lg-0">
+                            <div class="text-uppercase-expanded text-xs mb-4">Docs</div>
+                            <ul class="list-unstyled mb-0">
+                                <li class="mb-2"><a href="https://docs.open-metadata.org/" target="_blank">What
+                                        is OpenMetadata?</a></li>
+                                <li class="mb-2"><a href="https://docs.open-metadata.org/openmetadata/schemas"
+                                        target="_blank">Schemas</a></li>
+                                <li class="mb-2"><a href="https://docs.open-metadata.org/openmetadata/apis"
+                                        target="_blank">APIs</a></li>
+                                <li class="mb-2"><a href="https://docs.open-metadata.org/install/run-openmetadata"
+                                        target="_blank">Install</a></li>
+                                <li><a href="https://docs.open-metadata.org/install/metadata-ingestion"
+                                        target="_blank">Ingestion</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                            <div class="text-uppercase-expanded text-xs mb-4">Community</div>
+                            <ul class="list-unstyled mb-0">
+                                <li class="mb-2"><a href="http://slack.open-metadata.org/" target="_blank"><i
+                                            class="fab fa-slack"></i> Slack</a></li>
+                                <li class="mb-2"><a href="https://github.com/open-metadata/openmetadata"
+                                        target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
+                                <li class="mb-2"><a href="https://twitter.com/open_metadata" target="_blank"><i
+                                            class="fab fa-twitter"></i> Twitter</a></li>
+                                <li><a href="https://www.meetup.com/openmetadata-meetup-group/" target="_blank"><i
+                                            class="fab fa-meetup"></i>
+                                        Meetup</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-2">
+                            <div class="text-uppercase-expanded text-xs mb-2">Developed By</div>
+                            <img src="images/netlify.png" width="120">
                         </div>
                     </div>
                     <hr class="my-5" />
